@@ -16,6 +16,27 @@
 
 extensions_add_opemode_tab_agent ('network_tools','Network Tools','extensions/net_tools/nettool.png',"main_net_tools");
 
+function whereis_the_command ($command) {
+
+	ob_start();
+	system('whereis '. $command);
+	$output = ob_get_clean();
+	$result = explode(':', $output);
+	$result = trim($result[1]);
+
+	if ( empty($result)) {
+		return NULL;
+	}
+
+	$result = explode(' ', $result);
+	$fullpath = trim($result[0]);
+
+	if (! file_exists($fullpath)) {
+		return NULL;
+	}
+
+	return $fullpath;
+}
 
 function main_net_tools () {
 
@@ -46,117 +67,92 @@ function main_net_tools () {
 	echo "<input name=submit type=submit class='sub next' value='".__('Execute')."'>";
 	echo "</tr></table>";
 	echo "</form>";
-	
-	
+
+
 	$operation = get_parameter ("operation",0);
 	$community = get_parameter ("community","public");
-	
-	switch($operation) {
+
+	switch($operation){
 	case 1:
-                        ob_start();
-                        system('which traceroute');
-                        $output = ob_get_clean();
-                        $result = explode(':', $output);
-                        $result = trim($result[1]);
-                        if (! empty($result)) {
-                                echo "<h3>".__("Traceroute to "). $ip. "</h3>";
-                                echo "<pre>";
-                                echo system ("traceroute $ip");
-                                echo "</pre>";
-                        }
-                        elseif (file_exists('/usr/sbin/traceroute')) {
-                                echo "<h3>".__("Traceroute to "). $ip. "</h3>";
-                                echo "<pre>";
-                                echo system ("/usr/sbin/traceroute $ip");
-                                echo "</pre>";
-                        }
-                        else {
-                                ui_print_error_message(__('Traceroute executable does not exist.'));
-                        }
+			$traceroute = whereis_the_command ('traceroute');
+			if (empty($traceroute)) {
+				ui_print_error_message(__('Traceroute executable does not exist.'));
+			}
+			else {
+				echo "<h3>".__("Traceroute to "). $ip. "</h3>";
+				echo "<pre>";
+				echo system ("$traceroute $ip");
+				echo "</pre>";
+			}
+
                 break;
 
-	case 2: 
-				ob_start();
-        		system('which ping');
-        		$output = ob_get_clean();
-        		$result = explode(':', $output);
-        		$result = trim($result[1]);
-        		if (empty($result)) {
+        case 2: 
+			$ping = whereis_the_command ('ping');
+			if (empty($ping)) {
         			ui_print_error_message(__('Ping executable does not exist.'));
         		}
         		else {
 	        		echo "<h3>".__("Ping to "). $ip. "</h3>";
-	                echo "<pre>";
-	                echo system ("ping -c 5 $ip");
-	                echo "</pre>";
+				echo "<pre>";
+				echo system ("$ping -c 5 $ip");
+				echo "</pre>";
         		}
                 break;
                 
         case 4: 
-        		ob_start();
-        		system('which nmap');
-        		$output = ob_get_clean();
-        		$result = explode(':', $output);
-        		$result = trim($result[1]);
-        		if (empty($result)) {
+			$nmap = whereis_the_command ('nmap');
+			if (empty($nmap)) {
         			ui_print_error_message(__('Nmap executable does not exist.'));
         		}
         		else {
         			echo "<h3>".__("Basic TCP Scan on "). $ip. "</h3>";
                 	echo "<pre>";
-                	echo system ("nmap -F $ip");
+                	echo system ("$nmap -F $ip");
                 	echo "</pre>";
         		}
                 break;
         
         case 5: 
         		echo "<h3>".__("Domain and IP information for "). $ip. "</h3>";
-				ob_start();
-        		system('which dig');
-        		$output = ob_get_clean();
-        		$result = explode(':', $output);
-        		$result = trim($result[1]);
-        		if (empty($result)) {
+
+			$dig = whereis_the_command ('dig');
+			if (empty($dig)) {
         			ui_print_error_message(__('Dig executable does not exist.'));
         		}
         		else {
         			echo "<pre>";
-                	echo system ("dig $ip");
-                	echo "</pre>";
+				echo system ("dig $ip");
+				echo "</pre>";
         		}
-        		ob_start();
-        		system('which whois');
-        		$output = ob_get_clean();
-        		$result = explode(':', $output);
-        		$result = trim($result[1]);
-        		if (empty($result)) {
+
+			$whois = whereis_the_command ('whois');
+			if (empty($whois)) {
         			ui_print_error_message(__('Whois executable does not exist.'));
         		}
         		else {
         			echo "<pre>";
-                	echo system ("whois $ip");
-                	echo "</pre>";
-                	
+				echo system ("whois $ip");
+				echo "</pre>";
         		}
                 break;
-        case 3: echo "<h3>".__("SNMP information for "). $ip. "</h3>";
-                ob_start();
-        		system('which snmpget');
-        		$output = ob_get_clean();
-        		$result = explode(':', $output);
-        		$result = trim($result[1]);
-        		if (empty($result)) {
+
+        case 3:
+			echo "<h3>".__("SNMP information for "). $ip. "</h3>";
+
+			$snmpget = whereis_the_command ('snmpget');
+			if (empty($snmpget)) {
         			ui_print_error_message(__('SNMPget executable does not exist.'));
         		}
         		else {
         			echo "<h4>Uptime</h4>";
                 	echo "<pre>";
-                	echo exec ("snmpget -Ounv -v1 -c $community $ip .1.3.6.1.2.1.1.3.0 ");
+                	echo exec ("$snmpget -Ounv -v1 -c $community $ip .1.3.6.1.2.1.1.3.0 ");
                 	echo "</pre>";
 	        		echo "<h4>Device info</h4>";              
 	                echo "<pre>";
 	
-	                echo system ("snmpget -Ounv -v1 -c $community $ip .1.3.6.1.2.1.1.1.0 ");
+	                echo system ("$snmpget -Ounv -v1 -c $community $ip .1.3.6.1.2.1.1.1.0 ");
 	                echo "</pre>";
 	
 	                echo "<h4>Interface Information</h4>";                
@@ -164,11 +160,11 @@ function main_net_tools () {
 	                echo "<tr><th>".__("Interface");
 	                echo "<th>".__("Status");
 	
-	                $int_max =  exec ("snmpget -Oqunv -v1 -c $community $ip .1.3.6.1.2.1.2.1.0 ");
+	                $int_max =  exec ("$snmpget -Oqunv -v1 -c $community $ip .1.3.6.1.2.1.2.1.0 ");
 	
 	                for ($ax=0; $ax < $int_max; $ax++){
-	                    $interface = exec ("snmpget -Oqunv -v1 -c $community $ip .1.3.6.1.2.1.2.2.1.2.$ax ");
-	                    $estado = exec ("snmpget -Oqunv -v1 -c $community $ip .1.3.6.1.2.1.2.2.1.8.$ax ");
+	                    $interface = exec ("$snmpget -Oqunv -v1 -c $community $ip .1.3.6.1.2.1.2.2.1.2.$ax ");
+	                    $estado = exec ("$snmpget -Oqunv -v1 -c $community $ip .1.3.6.1.2.1.2.2.1.8.$ax ");
 	                    echo "<tr><td>$interface<td>$estado";
 	                }
 	                echo "</table>";
